--- a/tools.html
+++ b/tools.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CyberSafe - Tools and Resources</title>
-
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/QpG3fpr/cybersafe-logo-final.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
