--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CyberSafe Homepage</title>
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/QpG3fpr/cybersafe-logo-final.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +66,7 @@
     </section>
 
     <!-- Content Section -->
-    <section class="content-section-main" id="contentmain">
+    <section class="content-section-main mt-3" id="contentmain">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-6 mb-4">
