--- a/additionals.html
+++ b/additionals.html
@@ -68,8 +68,8 @@
                     <h2>Online Courses and Certifications</h2>
                     <p>Enhance your skills with these cybersecurity courses and certifications:</p>
                     <ul>
-                        <li><a href="https://www.coursera.org/specializations/cyber-security" target="_blank" class="resource-link">Cybersecurity Specialization on Coursera</a> – Offers a beginner-friendly approach with practical labs and projects.</li>
-                        <li><a href="https://www.edx.org/course/intro-to-cybersecurity" target="_blank" class="resource-link">Intro to Cybersecurity on edX</a> – A comprehensive introduction to fundamental concepts.</li>
+                        <li><a href="https://www.coursera.org/professional-certificates/google-cybersecurity" target="_blank" class="resource-link">Cybersecurity Specialization on Coursera</a> – Offers a beginner-friendly approach with practical labs and projects.</li>
+                        <li><a href="https://www.edx.org/learn/cybersecurity/ibm-cybersecurity-basics?index=product&queryID=5d4933ace8315c03af6a76f9ca5a13e3&position=3&linked_from=autocomplete&c=autocomplete" target="_blank" class="resource-link">Intro to Cybersecurity on edX</a> – A comprehensive introduction to fundamental concepts.</li>
                         <li><a href="https://www.compTIA.org/certifications/security" target="_blank" class="resource-link">CompTIA Security+ Certification</a> – Industry-recognized certification covering essential security knowledge.</li>
                     </ul>
                 </div>
@@ -90,7 +90,7 @@
                         <li><strong>Books:</strong>
                             <ul>
                                 <li><em><a href="https://www.amazon.com/Countdown-Zero-Day-Stuxnet-Digital/dp/077043617X" target="_blank" class="resource-link">Countdown to Zero Day</a></em> by Kim Zetter – A fascinating look into the Stuxnet cyberattack.</li>
-                                <li><em><a href="https://www.amazon.com/Cybersecurity-Basics-Gathering-Security-Analysis/dp/1484257986" target="_blank" class="resource-link">Cybersecurity Essentials</a></em> by Charles J. Brooks – A great starting point for beginners.</li>
+                                <li><em><a href="https://www.amazon.com/Cybersecurity-Essentials-audiobook/dp/B07JJC497T?dib=eyJ2IjoiMSJ9.nIgUydzil1Cjat-1yFz_NZHF5xZemjYhHJXoW5NlBqDT-qiq2rqsKOMYWyNkjaBUwk457piv-a8rC_NDDz7X5oCMm-OmnzoqQk0fzYzl0OfSCWF6h6sVdPGnHUSz3Eg5uyPa6-a5yg2kC2SixeimBF-L4NKMtj6XUjZDEkKgQ82LYYKr-sJ_D0zNhsuN78IibSP5Ev8mMK3Ka4pN_I6w3og96cRvJFw8ODZQ6ywkkfc.SfXcAYb8SA1eFnIzn5Ut64mCnm_zb6grHUV0LON6BnE&dib_tag=se&keywords=cybersecurity+essentials&qid=1730539597&sr=8-1" target="_blank" class="resource-link">Cybersecurity Essentials</a></em> by Charles J. Brooks – A great starting point for beginners.</li>
                             </ul>
                         </li>
                         <li><strong>Blogs:</strong>
