updated hover links :)

--- a/privacy-basics.html
+++ b/privacy-basics.html
@@ -55,7 +55,7 @@
     <section class="page-header">
         <div class="container text-center">
             <h1>Privacy Basics</h1>
-            <p class="lead">Essential tips for protecting your personal privacy online.</p>
+            <p class="lead">Your one-stop shop for tips  protecting your personal privacy online.</p>
         </div>
     </section>
 
