--- a/tools.html
+++ b/tools.html
@@ -11,6 +11,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=VT323&display=swap" rel="stylesheet">
     <link href="cybersafe.css" rel="stylesheet">    
+    <link href="addditionals.css" rel="stylesheet">
 
 </head>
 
@@ -89,7 +90,7 @@
                     <h2>Password Managers</h2>
                     <p>Password managers securely store and generate unique passwords, making it easier to manage multiple accounts. Consider these options:</p>
                     <ul>
-                        <li><strong><a href="https://www.lastpass.com/">LastPass</strong> - Offers a user-friendly experience and both free and premium versions.</li>
+                        <li><strong><a href="https://www.lastpass.com/">LastPass</a></strong> - Offers a user-friendly experience and both free and premium versions.</li>
                         <li><strong><a href="https://www.dashlane.com">Dashlane</a></strong> - Known for its strong security features, though it's more expensive.</li>
                         <li><strong><a href="https://1password.com/">1Password</a></strong> - A trusted option with cross-device syncing and robust encryption.</li>
                     </ul>
