--- a/tools.html
+++ b/tools.html
@@ -69,9 +69,9 @@
                     <h2>Antivirus Software</h2>
                     <p>Antivirus software helps protect your devices by detecting and removing malicious software. Some popular choices include:</p>
                     <ul>
-                        <li><strong><a href="https://in.norton.com/">Norton Antivirus</a></strong> - Known for comprehensive protection but can be resource-intensive.</li>
-                        <li><strong><a href="https://www.bitdefender.com/">Bitdefender</a></strong> - Offers excellent performance with minimal impact on device speed.</li>
-                        <li><strong><a href="https://www.avast.com/en-in/index#pc">Avast Free Antivirus</a></strong> - A good free option, though the premium version provides more features.</li>
+                        <li><strong><a href="https://in.norton.com/" target="_blank">Norton Antivirus</a></strong> - Known for comprehensive protection but can be resource-intensive.</li>
+                        <li><strong><a href="https://www.bitdefender.com/" target="_blank">Bitdefender</a></strong> - Offers excellent performance with minimal impact on device speed.</li>
+                        <li><strong><a href="https://www.avast.com/en-in/index#pc" target="_blank">Avast Free Antivirus</a></strong> - A good free option, though the premium version provides more features.</li>
                     </ul>
                     <p><strong>Pros:</strong> Real-time protection, frequent updates.</p>
                     <p><strong>Cons:</strong> Some may slow down your device, premium versions can be costly.</p>
@@ -90,9 +90,9 @@
                     <h2>Password Managers</h2>
                     <p>Password managers securely store and generate unique passwords, making it easier to manage multiple accounts. Consider these options:</p>
                     <ul>
-                        <li><strong><a href="https://www.lastpass.com/">LastPass</a></strong> - Offers a user-friendly experience and both free and premium versions.</li>
-                        <li><strong><a href="https://www.dashlane.com">Dashlane</a></strong> - Known for its strong security features, though it's more expensive.</li>
-                        <li><strong><a href="https://1password.com/">1Password</a></strong> - A trusted option with cross-device syncing and robust encryption.</li>
+                        <li><strong><a href="https://www.lastpass.com/" target="_blank">LastPass</a></strong> - Offers a user-friendly experience and both free and premium versions.</li>
+                        <li><strong><a href="https://www.dashlane.com" target="_blank">Dashlane</a></strong> - Known for its strong security features, though it's more expensive.</li>
+                        <li><strong><a href="https://1password.com/" target="_blank">1Password</a></strong> - A trusted option with cross-device syncing and robust encryption.</li>
                     </ul>
                     <p><strong>Pros:</strong> Simplifies password management, provides strong encryption.</p>
                     <p><strong>Cons:</strong> Some require a subscription, can be difficult to migrate data.</p>
@@ -105,9 +105,9 @@
                     <h2>Encryption Programs</h2>
                     <p>Encryption tools keep your files and data secure. These programs can help you protect sensitive information:</p>
                     <ul>
-                        <li><strong><a href="https://www.veracrypt.fr/code/VeraCrypt/">VeraCrypt</a></strong> - A free, open-source tool for encrypting files and entire drives.</li>
-                        <li><strong><a href="https://axcrypt.net">AxCrypt</a></strong> - Known for its simplicity and affordable premium plans.</li>
-                        <li><strong><a href="https://learn.microsoft.com/en-us/windows/security/operating-system-security/data-protection/bitlocker/">Bitlocker</a></strong> - Built into Windows, providing full disk encryption.</li>
+                        <li><strong><a href="https://www.veracrypt.fr/code/VeraCrypt/" target="_blank">VeraCrypt</a></strong> - A free, open-source tool for encrypting files and entire drives.</li>
+                        <li><strong><a href="https://axcrypt.net" target="_blank">AxCrypt</a></strong> - Known for its simplicity and affordable premium plans.</li>
+                        <li><strong><a href="https://learn.microsoft.com/en-us/windows/security/operating-system-security/data-protection/bitlocker/" target="_blank">Bitlocker</a></strong> - Built into Windows, providing full disk encryption.</li>
                     </ul>
                     <p><strong>Pros:</strong> Protects sensitive data, often free or built-in with OS.</p>
                     <p><strong>Cons:</strong> Some tools may require technical knowledge.</p>
@@ -126,8 +126,8 @@
                     <h2>Online Resources & Communities</h2>
                     <p>Stay updated and learn more about cybersecurity through these reputable resources:</p>
                     <ul>
-                        <li><strong><a href="https://owasp.org/">OWASP</a></strong> - Focuses on web application security, offering guides and best practices.</li>
-                        <li><strong><a href="https://www.reddit.com/r/cybersecurity/">r/cybersecurity on Reddit</a></strong> - A community forum for discussions, tips, and resources in cybersecurity.</li>
+                        <li><strong><a href="https://owasp.org/" target="_blank">OWASP</a></strong> - Focuses on web application security, offering guides and best practices.</li>
+                        <li><strong><a href="https://www.reddit.com/r/cybersecurity/" target="_blank">r/cybersecurity on Reddit</a></strong> - A community forum for discussions, tips, and resources in cybersecurity.</li>
                     </ul>
                     <p><strong>Pros:</strong> Free resources, access to expert advice.</p>
                     <p><strong>Cons:</strong> Some communities may require verification to join.</p>
