updated with the CHATBOT WOOOO

--- a/additionals.html
+++ b/additionals.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">cybersafe.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,21 +28,27 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="privacy-basics.html">Privacy Basics</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="fundamentals.html">Fundamentals</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="tools.html">Tools</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="safetytips.html">Safety Tips</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="feedback.html">Feedback</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Additional Resources</a>
                     </li>
@@ -64,7 +70,7 @@
         <div class="container">
             <!-- Online Courses and Certifications -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-8 order-md-1">
+                <div class="col-md-8 order-2 order-md-1">
                     <h2>Online Courses and Certifications</h2>
                     <p>Enhance your skills with these cybersecurity courses and certifications:</p>
                     <ul>
@@ -73,17 +79,17 @@
                         <li><a href="https://www.compTIA.org/certifications/security" target="_blank" class="resource-link">CompTIA Security+ Certification</a> – Industry-recognized certification covering essential security knowledge.</li>
                     </ul>
                 </div>
-                <div class="col-md-4 order-md-2">
+                <div class="col-md-4 order-1 order-md-2">
                     <img src="https://imgcdn.stablediffusionweb.com/2024/4/17/4fb62cda-b1c2-407f-a44f-52f9ecd2f126.jpg" alt="Online Courses and Certifications" class="info-image">
                 </div>
             </div>
 
             <!-- Recommended Books and Blogs -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-4 order-md-1">
+                <div class="col-md-4 order-1 order-md-1">
                     <img src="https://i.ibb.co/WDh7W3b/Whats-App-Image-2024-11-02-at-13-05-40-4a3ca5c4.jpg" alt="Books and Blogs" class="info-image">
                 </div>
-                <div class="col-md-8 order-md-2">
+                <div class="col-md-8 order-2 order-md-2">
                     <h2>Books and Blogs</h2>
                     <p>Explore in-depth cybersecurity topics with these recommended books and blogs:</p>
                     <ul>
@@ -132,6 +138,18 @@
 
     <!-- Bootstrap JS (optional for interactive components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "mu-ZOcaBu9Ul2N3ACpm73",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="mu-ZOcaBu9Ul2N3ACpm73"
+        domain="www.chatbase.co"
+        defer>
+        </script>
 </body>
 
 </html>
