--- a/privacy-basics.html
+++ b/privacy-basics.html
@@ -10,14 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=VT323&display=swap" rel="stylesheet">
-    <link href="cybersafe.css" rel="stylesheet">    
-
+    <link href="cybersafe.css" rel="stylesheet">
 </head>
 
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">cybersafe.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,44 +27,51 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Privacy Basics</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="fundamentals.html">Fundamentals</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="tools.html">Tools</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="safetytips.html">Safety Tips</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="feedback.html">Feedback</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="additionals.html">Additional Resources</a>
                     </li>
+            
                 </ul>
             </div>
         </div>
     </nav>
+    
 
     <!-- Page Header -->
     <section class="page-header">
         <div class="container text-center">
             <h1>Privacy Basics</h1>
-            <p class="lead">Your one-stop shop for tips  protecting your personal privacy online.</p>
+            <p class="lead">Your one-stop shop for tips protecting your personal privacy online.</p>
         </div>
     </section>
 
     <!-- Content Section -->
-       <!-- Content Section -->
-       <section class="content-section py-5">
+    <section class="content-section py-5">
         <div class="container">
             <!-- Privacy on Social Media -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-8 order-md-1">
+                <div class="col-12 col-md-8 order-2 order-md-1">
                     <h2>Privacy on Social Media</h2>
                     <p>Understand the importance of managing privacy on social platforms like Facebook, Instagram, Twitter, and LinkedIn. Here are some key steps to reduce data exposure:</p>
                     <ul>
@@ -74,17 +80,17 @@
                         <li><strong>Online Status:</strong> Many platforms allow you to manage your online visibility. Adjust these settings to limit who can see when you're online or your last active status.</li>
                     </ul>
                 </div>
-                <div class="col-md-4 order-md-2">
-                    <img src="https://i.ibb.co/pvhvSdw/Whats-App-Image-2024-11-02-at-13-31-27-0d5fca1c.jpg" alt="Privacy on Social Media" class="info-image">
+                <div class="col-12 col-md-4 order-1 order-md-2">
+                    <img src="https://i.ibb.co/pvhvSdw/Whats-App-Image-2024-11-02-at-13-31-27-0d5fca1c.jpg" alt="Privacy on Social Media" class="info-image img-fluid">
                 </div>
             </div>
 
             <!-- Using VPNs -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-4 order-md-1">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuDp5WlHw2jlKgD6ceGumDDYjZ_86suD6lMQ&s" alt="Using VPNs" class="info-image">
+                <div class="col-12 col-md-4 order-1 order-md-1">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuDp5WlHw2jlKgD6ceGumDDYjZ_86suD6lMQ&s" alt="Using VPNs" class="info-image img-fluid">
                 </div>
-                <div class="col-md-8 order-md-2">
+                <div class="col-12 col-md-8 order-2 order-md-2">
                     <h2>Using VPNs</h2>
                     <p>Virtual Private Networks (VPNs) help protect your browsing data and enhance online privacy. Here’s how you can get started with VPNs:</p>
                     <ul>
@@ -97,7 +103,7 @@
 
             <!-- Securing Personal Data -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-8 order-md-1">
+                <div class="col-12 col-md-8 order-2 order-md-1">
                     <h2>Securing Personal Data</h2>
                     <p>Protecting sensitive information stored on your devices is critical to privacy. Use these methods to secure your personal data:</p>
                     <ul>
@@ -106,17 +112,17 @@
                         <li><strong>Data Encryption:</strong> Encrypt sensitive files or use apps with built-in encryption. This makes your files unreadable to unauthorized users even if they gain access.</li>
                     </ul>
                 </div>
-                <div class="col-md-4 order-md-2">
-                    <img src="https://i.ibb.co/sWwYQhy/Whats-App-Image-2024-11-02-at-12-43-30-09d262cd.jpg" alt="Securing Personal Data" class="info-image">
+                <div class="col-12 col-md-4 order-1 order-md-2">
+                    <img src="https://i.ibb.co/sWwYQhy/Whats-App-Image-2024-11-02-at-12-43-30-09d262cd.jpg" alt="Securing Personal Data" class="info-image img-fluid">
                 </div>
             </div>
 
             <!-- Quick Tips -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-4 order-md-1">
-                    <img src="https://i.ibb.co/yP1P40w/Whats-App-Image-2024-11-02-at-12-48-57-1b83a5a7.jpg" alt="Quick Tips for Privacy" class="info-image">
+                <div class="col-12 col-md-4 order-1 order-md-1">
+                    <img src="https://i.ibb.co/yP1P40w/Whats-App-Image-2024-11-02-at-12-48-57-1b83a5a7.jpg" alt="Quick Tips for Privacy" class="info-image img-fluid">
                 </div>
-                <div class="col-md-8 order-md-2">
+                <div class="col-12 col-md-8 order-2 order-md-2">
                     <h2>Quick Tips</h2>
                     <p>Here are a few easy steps to reduce data collection and improve online privacy:</p>
                     <ul>
@@ -143,6 +149,18 @@
 
     <!-- Bootstrap JS (optional for interactive components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "mu-ZOcaBu9Ul2N3ACpm73",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="mu-ZOcaBu9Ul2N3ACpm73"
+        domain="www.chatbase.co"
+        defer>
+        </script>
 </body>
 
 </html>
