--- a/safetytips.html
+++ b/safetytips.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">cybersafe.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,21 +28,27 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="privacy-basics.html">Privacy Basics</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="fundamentals.html">Fundamentals</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="tools.html">Tools</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Safety Tips</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="feedback.html">Feedback</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link active" href="additionals.html">Additional Resources</a>
                     </li>
@@ -64,7 +70,7 @@
         <div class="container">
             <!-- Strong Passwords -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-8 order-md-1">
+                <div class="col-md-8 order-2 order-md-1">
                     <h2>Creating Strong Passwords</h2>
                     <p>Secure your accounts by creating complex, unique passwords for each service. Here are some tips:</p>
                     <ul>
@@ -79,7 +85,7 @@
                         <li>✅ I store passwords in a secure password manager.</li>
                     </ul>
                 </div>
-                <div class="col-md-4 order-md-2">
+                <div class="col-md-4 order-1 order-md-2">
                     <img src="https://i.ibb.co/zPT4sfr/Whats-App-Image-2024-11-02-at-13-02-13-3e13f91e.jpg" alt="Creating Strong Passwords" class="info-image">
                 </div>
             </div>
@@ -108,7 +114,7 @@
 
             <!-- Enabling Two-Factor Authentication -->
             <div class="row mb-5 align-items-center">
-                <div class="col-md-8 order-md-1">
+                <div class="col-md-8 order-2 order-md-1">
                     <h2>Using Two-Factor Authentication (2FA)</h2>
                     <p>Add an extra layer of security to your accounts by enabling two-factor authentication. Here’s how it helps:</p>
                     <ul>
@@ -123,7 +129,7 @@
                         <li>✅ I regularly update my 2FA methods.</li>
                     </ul>
                 </div>
-                <div class="col-md-4 order-md-2">
+                <div class="col-md-4 order-1 order-md-2">
                     <img src="https://i.ibb.co/5nH9YDx/Whats-App-Image-2024-11-02-at-13-01-02-1a64a432.jpg" alt="Two-Factor Authentication" class="info-image">
                 </div>
             </div>
@@ -159,6 +165,18 @@
 
     <!-- Bootstrap JS (optional for interactive components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "mu-ZOcaBu9Ul2N3ACpm73",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="mu-ZOcaBu9Ul2N3ACpm73"
+        domain="www.chatbase.co"
+        defer>
+        </script>
 </body>
 
 </html>
