--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">cybersafe.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,21 +29,27 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link active" href="privacy-basics.html">Privacy Basics</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="fundamentals.html">Fundamentals</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="tools.html">Tools</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="safetytips.html">Safety Tips</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="feedback.html">Feedback</a>
                     </li>
+                    <li class="nav-item mx-2"> </li> <!-- Pipe separator -->
                     <li class="nav-item">
                         <a class="nav-link" href="additionals.html">Additional Resources</a>
                     </li>
@@ -68,7 +74,7 @@
     <!-- Content Section -->
     <section class="content-section-main mt-3" id="contentmain">
         <div class="container">
-            <div class="row">
+            <div class="row content-row">
                 <div class="col-12 col-sm-12 col-md-6 mb-4">
                     <a href="privacy-basics.html">
                     <div class="content-card">
@@ -134,6 +140,18 @@
         </footer>
     <!-- Bootstrap JS (optional for interactive components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "mu-ZOcaBu9Ul2N3ACpm73",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="mu-ZOcaBu9Ul2N3ACpm73"
+        domain="www.chatbase.co"
+        defer>
+        </script>
 </body>
 
 </html>
