--- a/fundamentals.html
+++ b/fundamentals.html
@@ -145,6 +145,25 @@
         domain="www.chatbase.co"
         defer>
         </script>
+        <!-- JavaScript for Slide-Up Animation -->
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        // Show all rows initially by adding the `visible` class
+        const rows = document.querySelectorAll(".content-section .row");
+        rows.forEach(row => row.classList.add("visible"));
+    });
+
+    document.addEventListener("scroll", function() {
+        const rows = document.querySelectorAll(".content-section .row");
+        rows.forEach(row => {
+            const rect = row.getBoundingClientRect();
+            if (rect.top <= window.innerHeight * 0.85) {
+                row.classList.add("slide-up");
+            }
+        });
+    });
+</script>
+
 </body>
 
 </html>
